# pyeventbt

./: CLAUDE.md  DOCUMENTATION.md  LICENSE  README.md  example_bbands_breakout.py  example_quantdle_ma_crossover.py  pyproject.toml
.claude/: settings.local.json
docs/: EXAMPLES_COOKBOOK.md  REQUIREMENTS.md  architecture_comparison.md  cbp_diagrams.md  contracts_protocols.md  deployment_guide.md  design_pattern.md  distributed_migration.md  event_flow_diagram.md  implementation_guide.md  industry_research.md  mt5_responses_reference.md  packaging_guide.md  pyeventbt.app.md  pyeventbt.backtest.md  pyeventbt.broker.mt5_broker.connectors.live_mt5_broker.md  pyeventbt.broker.mt5_broker.connectors.mt5_simulator_connector.md  pyeventbt.broker.mt5_broker.core.entities.init_credentials.md  pyeventbt.broker.mt5_broker.core.entities.md  pyeventbt.broker.mt5_broker.core.entities.tick.md  pyeventbt.broker.mt5_broker.core.entities.trade_position.md  pyeventbt.broker.mt5_broker.core.entities.trade_request.md  pyeventbt.broker.mt5_broker.core.md  pyeventbt.config.configs.md  pyeventbt.config.core.entities.base_config.md  pyeventbt.config.md  pyeventbt.core.entities.hyper_parameter.md  pyeventbt.core.entities.variable.md  pyeventbt.core.md  pyeventbt.data_provider.connectors.md  pyeventbt.events.events.md  pyeventbt.execution_engine.core.interfaces.execution_engine_interface.md  pyeventbt.execution_engine.services.execution_engine_service.md  pyeventbt.hooks.md  pyeventbt.indicators.core.interfaces.indicator_interface.md  pyeventbt.md  pyeventbt.portfolio.core.entities.closed_position.md  pyeventbt.portfolio.core.entities.open_position.md  pyeventbt.portfolio_handler.md  pyeventbt.risk_engine.md  (+23 more)
docs/api-reference/: pyeventbt.__init__.md  pyeventbt.backtest.core.backtest_results.md  pyeventbt.broker.md  pyeventbt.broker.mt5_broker.connectors.md  pyeventbt.broker.mt5_broker.core.entities.account_info.md  pyeventbt.events.md  (+59 more)
(+32 files in other folders)
