[tool.poetry]
name = "pyeventbt"
version = "0.0.1"
description = "Event-Driven backtesting in python"
authors = ["Marti Castany, Alain Porto, Jaume Antoli"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/marticastany/pyeventbt"
repository = "https://github.com/marticastany/pyeventbt"
keywords = ["backtesting", "event-driven", "trading"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.1.1"
pydantic = "^2.11.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

